# serializer version: 1
# name: test_switch_entities_snapshot[imou_mock_devices0][switch.device_1_human_detect-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device_1_human_detect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Human detect',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Human detect',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'header_detect',
    'unique_id': 'd1$header_detect',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[imou_mock_devices0][switch.device_1_human_detect-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Human detect',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_1_human_detect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities_snapshot[imou_mock_devices0][switch.device_1_motion_detect-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device_1_motion_detect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Motion detect',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Motion detect',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'motion_detect',
    'unique_id': 'd1$motion_detect',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[imou_mock_devices0][switch.device_1_motion_detect-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Motion detect',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_1_motion_detect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
